--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-@import-normalize; /* bring in normalize.css styles */
+:root {
+  --primary-color: #000;
+}
 
 body {
   margin: 0;
@@ -13,3 +15,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
