--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,18 @@ code {
   box-sizing: border-box;
 }
 
+.header-link {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+  margin-right: 25px;
+  display: inline-flex;
+  border: 1px solid black;
+  border-radius: 10px;
+  transition: all 0.3s;
+}
+.header-link.active {
+  background-color: black;
+  color: #fff;
+}
